# basegun-ml

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish-image-github.yml
MLpackages/basegunML/: README.md  pyproject.toml
MLpackages/basegunML/basegunML/: __init__.py  classification.py  measure.py  utils.py
MLpackages/basegunML/basegunML.egg-info/: PKG-INFO  top_level.txt
MLpackages/basegun_ml/: README.md  pyproject.toml
MLpackages/basegun_ml/basegunML.egg-info/: SOURCES.txt  requires.txt
MLpackages/basegun_ml/basegun_ml/: __init__.py  classification.pt  classification.py  exception.py  measure.py  ocr.py  utils.py
MLpackages/basegun_ml/basegun_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MLpackages/tests/: test_OCR.py  test_classification.py  test_measure.py
Package/basegun_ml/: pyproject.toml
Package/basegun_ml/basegun_ml/: CNNIQA.pth
Research/alarm_gun/: PipelineEvaluation.ipynb
Research/legacy/classification/: gradcam.py  post_training.py  prepare_data.py  requirements.txt  train.py
Research/measure_module/Inference/: MeasureModule.py
Research/measure_module/Training/: Readme.md
classification/: README.md  gradcam.py  inference.py  post_training.py  prepare_data.py  requirements.txt  train.py
classification/notebooks/: Clustering.ipynb  README.md  gradcam.ipynb  inference_on_batch.ipynb
classificationV2/: Readme.md
legacy/classification/notebooks/: calibration.ipynb  thresholds.ipynb
measure_module/Inference/: Readme.md
measure_module/Training/: Readme.md  train.ipynb
package/: README.md
package/basegun_ml/: README.md  pyproject.toml
package/basegun_ml/basegun_ml/: __init__.py  classification.py  measure.py  ocr.py
package/tests/: test_OCR.py  test_classification.py  test_measure.py
research/: README.md
research/alarm_gun/: QualityImage.ipynb
research/brand_model_caliber_detection/: BasegunRGA.json  CalibreDataset.ipynb  DatasetNaturabuy.ipynb  ExtractionInfoResearch.ipynb  ExtractionMarqueModèle.ipynb
research/classification/: Readme.md  inference.py
research/legacy/classification/: README.md  gradcam.py  post_training.py  prepare_data.py  train.py
research/legacy/classification/notebooks/: README.md  compare_pth_onnx.ipynb  inference_on_batch.ipynb
research/measure_module/: Readme.md
research/measure_module/Inference/: MeasureModule.py
research/measure_module/Training/: config-pose.yaml  configClassif.yaml
